--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@babel/core": "^7.29.0",
     "@babel/preset-env": "^7.29.0",
     "babel-loader": "^10.0.0",
+    "copy-webpack-plugin": "^13.0.1",
     "css-loader": "^7.1.3",
     "html-webpack-plugin": "^5.6.6",
+    "leaflet": "^1.9.4",
     "style-loader": "^4.0.0",
     "webpack": "^5.105.0",
     "webpack-cli": "^6.0.1",
